Another attempt at fixing #20
iPhone 6 on iOS 9 appears to be using a viewport approx. 5% larger
than specs.  The media query here correctly activates on the 6, both
real and simulated (sim is using iOS 8.3, but does now exhibit the
undesirable whitespace at R)

This styling is a brute force attempt to get the page to occupy
100% of the viewport width.  If no other solution is found before
launch, we can duplicate this for the 5, 6s, etc as needed.

--- a/scss/first-year.scss
+++ b/scss/first-year.scss
@@ -558,14 +558,21 @@ ul {list-style-type: circle;}
 
 
 
-
-
-@media #{$small-up} {
-  #featured-container {
-    background: grey;
+@media screen and (max-width: 375px) and (orientation: portrait) {
+  $iphone-6-max-w: 395;
+  #navigation-container {
+    max-width: #{$iphone-6-max-w}px;
+    width: #{$iphone-6-max-w}px;
   }
-}
-
+  body {
+    max-width: #{$iphone-6-max-w}px;
+    width: #{$iphone-6-max-w}px;
+  }
+  body > .row {
+    max-width: #{$iphone-6-max-w}px;
+    width: #{$iphone-6-max-w}px;
+  }
+} // end custom media query
 
 @media #{$small-up} {
 
